[gd_scene load_steps=6 format=3 uid="uid://cih7gm4sjbfr1"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_cja13"]
[ext_resource type="AudioStream" uid="uid://dclb17mfcibae" path="res://Audio/SFX - Death Explosion.ogg" id="2_ndqcl"]
[ext_resource type="AudioStream" uid="uid://5g1f7eqb8ke" path="res://Audio/SFX - Success.ogg" id="3_t4iek"]

[sub_resource type="CylinderMesh" id="CylinderMesh_pfr17"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4xcpq"]

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
contact_monitor = true
max_contacts_reported = 10
angular_damp = 1.0
script = ExtResource("1_cja13")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_pfr17")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_4xcpq")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ndqcl")

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t4iek")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
